[tool.poetry]
name = "derby"
version = "0.1.0"
description = "Game of Speedway."
authors = ["Michal Piotrowski"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
isort = "^5.11.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
